package logic.options;

public class AirRefueling extends Option {
}
