package logic.options;

public class AllowLanding extends Option {
}
