package logic.options;

public class CrossWinds extends Option {
}
