package logic.options;

public class IceStorm extends Option {
}
