package logic.options;

public class IcyRunWays extends Option {
}
