package logic.options;

public class LetTheManGo extends Option {
}
