package logic.options;

public class LetThemLand extends Option {
}
