package logic.options;

public abstract class Option {
}
