package logic.options;

public class RefuseThem extends Option {
}
