package logic.options;

public class RescueTeam extends Option {
}
