package logic.planes;

public class Plane {
}
