package logic.planes;

public class PlaneManager {
}
