package logic.requests;

public class EmergencyLanding extends Landing {
}
