package logic.requests;

public class FundingEvent extends Request {
}
