package logic.requests;

public class JohnMcClain extends Request {
}
