package logic.requests;

public class JumboJet extends Landing {
}
