package logic.requests;

public class Landing extends Request {
}
