package logic.requests;

public class PlaneLanding extends Landing {
}
