package logic.requests;

public class Protests extends Request {
}
