

package request;

public class request {
    double Rarity;
    String Title;
    String Description;
    int Option[] Options;
}
