package userInterface.menus;

public class AdvanceHourMenu {
}
