package userInterface.menus;

public class MainMenu {
}
