package userInterface.menus;

public class Menu {
}
