package userInterface.menus;

public class MenuManager {
}
