package userInterface.menus;

public enum MenuType {
}
